Fixed stuck hover styles on mobile devices
fixes STA-230

--- a/frontend/shared/scss/components/buttons.scss
+++ b/frontend/shared/scss/components/buttons.scss
@@ -4,6 +4,7 @@
 
 .inline-link {
     cursor: pointer;
+
     &, &:hover, &:link, &:active, &:visited {
         color: $color-primary;
         font-weight: $font-weight-semibold;
@@ -16,8 +17,10 @@
         }
     }
 
-    &:hover {
-        opacity: 0.6;
+    @media (hover: hover) {
+        &:hover {
+            opacity: 0.6;
+        }
     }
 
     &:active {
@@ -156,8 +159,10 @@
             margin-right: -27px;
             margin-left: 27px - $border-width;
 
-            &:hover {
-                background-color: rgba($color-background, 0.2);
+            @media (hover: hover) {
+                &:hover {
+                    background-color: rgba($color-background, 0.2);
+                }
             }
         }
     }
@@ -350,14 +355,16 @@
             }
         }
 
-        &:hover {
-            opacity: 0.5;
-            transition: opacity 0s, color 0.2s;
+        @media (hover: hover) {
+            &:hover {
+                opacity: 0.5;
+                transition: opacity 0s, color 0.2s;
 
-            &.selected {
-                opacity: 1;
+                &.selected {
+                    opacity: 1;
+                }
             }
-        }
+    }
 
         &:active {
             opacity: 0.15;
